# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: check-page-analyzer.yml
page_analyzer/: app.py  checker.py  normalizer.py  repository.py  validator.py
page_analyzer/templates/: base.html  index.html  show_urls.html  urls.html
